# CustomDesktopQTTest

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  resources.qrc
src/: DesktopWidget.cpp  DesktopWidget.h  MainWindow.cpp  MainWindow.h  WireGuardConfig.cpp  WireGuardConfig.h  WireGuardConfigDialog.cpp  WireGuardConfigDialog.h  WireGuardConfigManager.cpp  WireGuardConfigManager.h  WireGuardManager.cpp  WireGuardManager.h  WireGuardServiceHost.cpp  WireGuardServiceHost.h  WireGuardStatusPanel.cpp  WireGuardStatusPanel.h  WireGuardTunnel.cpp  WireGuardTunnel.h  boxfilemanager.cpp  boxfilemanager.h  main.cpp
src/util/: ConfigManager.cpp  ConfigManager.h  logger.h
